--- a/src/Clientes/ClientesPrincipal.form
+++ b/src/Clientes/ClientesPrincipal.form
@@ -120,11 +120,13 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="CdClientesBtn" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="RecarregarTabela" alignment="0" min="-2" pref="40" max="-2" attributes="0"/>
-                          <Component id="ExcluirClientesBtn" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                          <Component id="EditarClientes" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="CdClientesBtn" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                              <Component id="ExcluirClientesBtn" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                              <Component id="EditarClientes" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
