--- a/src/Clientes/CadastrodeClientes.form
+++ b/src/Clientes/CadastrodeClientes.form
@@ -148,7 +148,7 @@
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="EnderecoClienteLabel1" min="-2" max="-2" attributes="0"/>
-                                  <Component id="EnderecoCliente1" min="-2" pref="282" max="-2" attributes="0"/>
+                                  <Component id="Email" min="-2" pref="282" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
@@ -250,7 +250,7 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="EnderecoClienteLabel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="EnderecoCliente1" min="-2" pref="27" max="-2" attributes="0"/>
+                      <Component id="Email" min="-2" pref="27" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="BtnClientes" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
@@ -521,10 +521,10 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CNPJCheckBoxActionPerformed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JTextField" name="EnderecoCliente1">
+            <Component class="javax.swing.JTextField" name="Email">
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="EnderecoCliente1ActionPerformed"/>
-                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="EnderecoCliente1KeyPressed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="EmailActionPerformed"/>
+                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="EmailKeyPressed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="EnderecoClienteLabel1">
