--- a/src/Clientes/EditarClientes.form
+++ b/src/Clientes/EditarClientes.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -148,12 +148,12 @@
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="EnderecoClienteLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="EnderecoCliente1" alignment="0" min="-2" pref="282" max="-2" attributes="0"/>
+                                  <Component id="EmailCliente" alignment="0" min="-2" pref="282" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="EnderecoClienteLabel2" min="-2" max="-2" attributes="0"/>
-                                  <Component id="IdImovel" min="-2" pref="78" max="-2" attributes="0"/>
+                                  <Component id="IdClienteLabel" min="-2" max="-2" attributes="0"/>
+                                  <Component id="IdCliente" min="-2" pref="78" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
@@ -257,12 +257,12 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="EnderecoClienteLabel1" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="EnderecoCliente1" min="-2" pref="27" max="-2" attributes="0"/>
+                              <Component id="EmailCliente" min="-2" pref="27" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
-                              <Component id="EnderecoClienteLabel2" min="-2" max="-2" attributes="0"/>
+                              <Component id="IdClienteLabel" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="IdImovel" min="-2" pref="27" max="-2" attributes="0"/>
+                              <Component id="IdCliente" min="-2" pref="27" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
@@ -535,10 +535,10 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CNPJCheckBoxActionPerformed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JTextField" name="EnderecoCliente1">
+            <Component class="javax.swing.JTextField" name="EmailCliente">
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="EnderecoCliente1ActionPerformed"/>
-                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="EnderecoCliente1KeyPressed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="EmailClienteActionPerformed"/>
+                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="EmailClienteKeyPressed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="EnderecoClienteLabel1">
@@ -549,18 +549,18 @@
                 <Property name="text" type="java.lang.String" value="Email"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="IdImovel">
+            <Component class="javax.swing.JTextField" name="IdCliente">
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="IdImovelActionPerformed"/>
-                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="IdImovelKeyPressed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="IdClienteActionPerformed"/>
+                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="IdClienteKeyPressed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JLabel" name="EnderecoClienteLabel2">
+            <Component class="javax.swing.JLabel" name="IdClienteLabel">
               <Properties>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="c" green="c" red="c" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="ID Im&#xf3;vel"/>
+                <Property name="text" type="java.lang.String" value="ID Cliente"/>
               </Properties>
             </Component>
           </SubComponents>
