Commit Clientes e Login

--- a/src/Clientes/ClientesPrincipal.form
+++ b/src/Clientes/ClientesPrincipal.form
@@ -101,7 +101,9 @@
                                   <Group type="102" attributes="0">
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Component id="ExcluirClientesBtn" min="-2" pref="169" max="-2" attributes="0"/>
-                                      <EmptySpace max="32767" attributes="0"/>
+                                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                                      <Component id="DetalharClientes" max="32767" attributes="0"/>
+                                      <EmptySpace type="separate" max="-2" attributes="0"/>
                                       <Component id="RecarregarTabela" min="-2" pref="50" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
@@ -126,6 +128,7 @@
                               <Component id="CdClientesBtn" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                               <Component id="ExcluirClientesBtn" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                               <Component id="EditarClientes" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                              <Component id="DetalharClientes" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
@@ -357,6 +360,24 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="EditarClientesActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JButton" name="DetalharClientes">
+              <Properties>
+                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="60" green="56" red="ef" type="rgb"/>
+                </Property>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Detalhar Info"/>
+                <Property name="borderPainted" type="boolean" value="false"/>
+                <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+                  <Color id="Hand Cursor"/>
+                </Property>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="DetalharClientesActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
