--- a/src/TelaInicial/TelaInicial.form
+++ b/src/TelaInicial/TelaInicial.form
@@ -234,6 +234,9 @@
               <Color id="Hand Cursor"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ConsultaProdutosRapidoActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="Principal">
           <Properties>
